{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 420,
  "lineage": "6bb51408-6810-be67-2b28-d1fd01a0861e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4a7c3cfca6521ea",
            "domain": "vpc",
            "id": "eipalloc-0f4a7c3cfca6521ea",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-168-134-110.compute-1.amazonaws.com",
            "public_ip": "35.168.134.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_0"
            },
            "tags_all": {
              "Name": "eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.quick_start_gw",
            "aws_vpc.quick_start_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d3cbf3b98f8a1d3",
            "domain": "vpc",
            "id": "eipalloc-06d3cbf3b98f8a1d3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-211-109-136.compute-1.amazonaws.com",
            "public_ip": "3.211.109.136",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_1"
            },
            "tags_all": {
              "Name": "eip_1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.quick_start_gw",
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0806bc468ce3a22ec",
            "arn": "arn:aws:ec2:us-east-1:967906495397:instance/i-0dccb3a418985ead5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dccb3a418985ead5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a44fb5174b2001a1",
            "private_dns": "ip-10-0-2-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.180",
            "public_dns": "ec2-100-24-99-117.compute-1.amazonaws.com",
            "public_ip": "100.24.99.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0642b868e9ba3a44e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-055b5b233ea9a6b5f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a06c4c19d3b9a212",
            "tags": {
              "Name": "Bastion-host"
            },
            "tags_all": {
              "Name": "Bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-055b5b233ea9a6b5f"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_allow_ssh",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc",
            "data.aws_ami.amazon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0806bc468ce3a22ec",
            "arn": "arn:aws:ec2:us-east-1:967906495397:instance/i-0c675c10a381628b2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c675c10a381628b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb8a7864310fdb7f",
            "private_dns": "ip-10-0-0-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be329971ff9ed6d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02540efcc703ee27d",
              "sg-055b5b233ea9a6b5f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7ecc7dbd1fc7968",
            "tags": {
              "Name": "Web Server"
            },
            "tags_all": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02540efcc703ee27d",
              "sg-055b5b233ea9a6b5f"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.SG_allow_ssh",
            "aws_security_group.allow_http",
            "aws_subnet.private_network",
            "aws_vpc.quick_start_vpc",
            "data.aws_ami.amazon",
            "tls_private_key.instance_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "quick_start_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:internet-gateway/igw-018ff5edfcef28ece",
            "id": "igw-018ff5edfcef28ece",
            "owner_id": "967906495397",
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "dependencies": [
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "quick_start_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:967906495397:loadbalancer/app/tf-lb-20230604063703045300000003/b880a5a955f4aa57",
            "arn_suffix": "app/tf-lb-20230604063703045300000003/b880a5a955f4aa57",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20230604063703045300000003-1769744807.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:967906495397:loadbalancer/app/tf-lb-20230604063703045300000003/b880a5a955f4aa57",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20230604063703045300000003",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02540efcc703ee27d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a06c4c19d3b9a212"
              },
              {
                "subnet_id": "subnet-0b5821d635582e58a"
              }
            ],
            "subnets": [
              "subnet-0a06c4c19d3b9a212",
              "subnet-0b5821d635582e58a"
            ],
            "vpc_id": "vpc-0c75ba0ad3969614b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:967906495397:listener/app/tf-lb-20230604063703045300000003/b880a5a955f4aa57/d91ca4e78e915259",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:967906495397:targetgroup/tg-webserver/c9488c450430b4a2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:967906495397:listener/app/tf-lb-20230604063703045300000003/b880a5a955f4aa57/d91ca4e78e915259",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:967906495397:loadbalancer/app/tf-lb-20230604063703045300000003/b880a5a955f4aa57",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.quick_start_lb",
            "aws_lb_target_group.tg_webserver",
            "aws_security_group.allow_http",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:967906495397:targetgroup/tg-webserver/c9488c450430b4a2",
            "arn_suffix": "targetgroup/tg-webserver/c9488c450430b4a2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:967906495397:targetgroup/tg-webserver/c9488c450430b4a2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-webserver",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "dependencies": [
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_webserver_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:967906495397:targetgroup/tg-webserver/c9488c450430b4a2-20230604063736648100000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:967906495397:targetgroup/tg-webserver/c9488c450430b4a2",
            "target_id": "i-0c675c10a381628b2"
          },
          "dependencies": [
            "aws_instance.web_server",
            "aws_key_pair.generated_key",
            "aws_lb_target_group.tg_webserver",
            "aws_security_group.SG_allow_ssh",
            "aws_security_group.allow_http",
            "aws_subnet.private_network",
            "aws_vpc.quick_start_vpc",
            "data.aws_ami.amazon",
            "tls_private_key.instance_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4a7c3cfca6521ea",
            "association_id": "eipassoc-0439d96f2e761758e",
            "connectivity_type": "public",
            "id": "nat-05384b301299ce30c",
            "network_interface_id": "eni-0cc19aa9712ccf39d",
            "private_ip": "10.0.2.203",
            "public_ip": "35.168.134.110",
            "subnet_id": "subnet-0a06c4c19d3b9a212",
            "tags": {
              "Name": "Nat Gateway 0"
            },
            "tags_all": {
              "Name": "Nat Gateway 0"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.quick_start_gw",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d3cbf3b98f8a1d3",
            "association_id": "eipassoc-089f56e4fd8d016cf",
            "connectivity_type": "public",
            "id": "nat-093fa2e50bbe668bb",
            "network_interface_id": "eni-0300ae103f972eb6c",
            "private_ip": "10.0.3.41",
            "public_ip": "3.211.109.136",
            "subnet_id": "subnet-0b5821d635582e58a",
            "tags": {
              "Name": "Nat Gateway 1"
            },
            "tags_all": {
              "Name": "Nat Gateway 1"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.quick_start_gw",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:route-table/rtb-0983dbc29e37f7af7",
            "id": "rtb-0983dbc29e37f7af7",
            "owner_id": "967906495397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05384b301299ce30c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.quick_start_gw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:route-table/rtb-017e57d4021377164",
            "id": "rtb-017e57d4021377164",
            "owner_id": "967906495397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-093fa2e50bbe668bb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.quick_start_gw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:route-table/rtb-00609ee7a23766d29",
            "id": "rtb-00609ee7a23766d29",
            "owner_id": "967906495397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018ff5edfcef28ece",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.quick_start_gw",
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087881563eba97f45",
            "route_table_id": "rtb-0983dbc29e37f7af7",
            "subnet_id": "subnet-0d7ecc7dbd1fc7968"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.quick_start_gw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_network",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017be3b1670a90615",
            "route_table_id": "rtb-017e57d4021377164",
            "subnet_id": "subnet-09480d21d572c757e"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.quick_start_gw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_network",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c7991f78b1b2c94",
            "route_table_id": "rtb-00609ee7a23766d29",
            "subnet_id": "subnet-0a06c4c19d3b9a212"
          },
          "dependencies": [
            "aws_internet_gateway.quick_start_gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033113ee1818ec4a8",
            "route_table_id": "rtb-00609ee7a23766d29",
            "subnet_id": "subnet-0b5821d635582e58a"
          },
          "dependencies": [
            "aws_internet_gateway.quick_start_gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_network",
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:security-group/sg-055b5b233ea9a6b5f",
            "description": "Allow ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055b5b233ea9a6b5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH connection",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow SSH Bastion",
            "name_prefix": "",
            "owner_id": "967906495397",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:security-group/sg-02540efcc703ee27d",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02540efcc703ee27d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow HTTP",
            "name_prefix": "",
            "owner_id": "967906495397",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:subnet/subnet-0d7ecc7dbd1fc7968",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7ecc7dbd1fc7968",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967906495397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_0"
            },
            "tags_all": {
              "Name": "private_subnet_0"
            },
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "dependencies": [
            "aws_vpc.quick_start_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:subnet/subnet-09480d21d572c757e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09480d21d572c757e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967906495397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "dependencies": [
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:subnet/subnet-0a06c4c19d3b9a212",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a06c4c19d3b9a212",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967906495397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_0"
            },
            "tags_all": {
              "Name": "public_subnet_0"
            },
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "dependencies": [
            "aws_vpc.quick_start_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:subnet/subnet-0b5821d635582e58a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5821d635582e58a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967906495397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0c75ba0ad3969614b"
          },
          "dependencies": [
            "aws_vpc.quick_start_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "quick_start_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967906495397:vpc/vpc-0c75ba0ad3969614b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0240c4aefd34f0921",
            "default_route_table_id": "rtb-08e193a4888dd4720",
            "default_security_group_id": "sg-0ee77a8481c16e731",
            "dhcp_options_id": "dopt-071e5bacc54e1a0c7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c75ba0ad3969614b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e193a4888dd4720",
            "owner_id": "967906495397"
          }
        }
      ]
    }
  ]
}